Fix compile failures